# auto_research

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  code_to_be_tested.py  format.sh  key.json  pre-commit-config.yaml  pyproject.toml  setup.cfg
auto_research/: __init__.py
auto_research/applications/: surveys.py
auto_research/reimplementation/: code_availability_check.py
auto_research/search/: core.py  data_retrival.py  files_management.py  information.py  keywords.py  post_processing.py
auto_research/survey/: core.py  paper_reader.py  prompter.py  prompts.py
auto_research/utils/: __init__.py  cost.py  fault_tolerance.py  files.py  inquiry.py  prompter.py  stored_info.py
docs/: .buildinfo  Makefile  api.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
docs/_downloads/13bc742be66adfd2c069ff7bb129495c/: top_to_survey.py
docs/_downloads/242f32ec284e3139accd667f9fd6e9db/: summarize_a_paper.ipynb
docs/_downloads/2f83ab950768ba0315df1ae9e0f5aafc/: search_papers.ipynb
docs/_downloads/5193d3ef0da06fa05283e406d8f658e5/: summarize_all_papers.ipynb
docs/_downloads/5f709d13cec4ca713c4c2ffc5cf7fe0a/: explain_a_paper.py
docs/_downloads/644d8df530e3104a4d1286e1c2c345c2/: top_to_survey.ipynb
docs/_downloads/6f933bf294e3be1a8d4829ff280774de/: search_papers.py
docs/_downloads/7d6bfe9004589548aa19dc70068ff49c/: get_github_link.ipynb
docs/_downloads/88ee55421d170cdb16d18c882a440b57/: get_github_link.py
docs/_downloads/915e6bae1ceb2faa8317d0c1394e56e4/: summarize_all_papers.py
docs/_downloads/9b6909f4dd22c7b9ed455c7223663372/: explain_a_paper.ipynb
docs/_downloads/9c276878dd0c231e43e877d6e8c7ce61/: summarize_a_paper.py
docs/_examples_gallery/: explain_a_paper.html  get_github_link.html  index.html  search_papers.html  sg_execution_times.html  summarize_a_paper.html  summarize_all_papers.html  top_to_survey.html
docs/_modules/: index.html
docs/_modules/LLM_utils/: storage.html
docs/_modules/auto_research/applications/: surveys.html
docs/_modules/auto_research/reimplementation/: code_availability_check.html
docs/_modules/auto_research/search/: core.html  data_retrival.html  files_management.html  information.html  keywords.html  post_processing.html
docs/_modules/auto_research/survey/: core.html  paper_reader.html  prompts.html
docs/_modules/auto_research/utils/: files.html  stored_info.html
docs/_sources/: api.rst.txt  index.rst.txt  sg_execution_times.rst.txt
docs/_sources/_examples_gallery/: explain_a_paper.rst.txt  get_github_link.rst.txt  index.rst.txt  search_papers.rst.txt  sg_execution_times.rst.txt  summarize_a_paper.rst.txt  summarize_all_papers.rst.txt  top_to_survey.rst.txt
docs/_sources/target_code/: auto_research.applications.rst.txt  auto_research.applications.surveys.rst.txt  auto_research.reimplementation.rst.txt  auto_research.rst.txt  auto_research.search.core.rst.txt  auto_research.search.information.rst.txt  auto_research.search.keywords.rst.txt  auto_research.search.post_processing.rst.txt  auto_research.search.rst.txt  auto_research.survey.paper_reader.rst.txt  auto_research.survey.prompts.rst.txt  auto_research.survey.rst.txt  auto_research.utils.files.rst.txt  auto_research.utils.rst.txt  auto_research.utils.stored_info.rst.txt  auto_research.version.rst.txt  modules.rst.txt
docs/_static/css/: custom.css
docs/source/: api.rst  conf.py  index.rst
docs/source/examples/: GALLERY_HEADER.rst  example.py
docs/source/target_code/: GALLERY_HEADER.rst  example_module.py
docs/target_code/: auto_research.applications.html  auto_research.applications.surveys.html  auto_research.html  auto_research.reimplementation.code_availability_check.html  auto_research.reimplementation.html  auto_research.search.core.html  auto_research.search.data_retrival.html  auto_research.search.files_management.html  auto_research.search.html  auto_research.search.information.html  auto_research.search.keywords.html  auto_research.search.post_processing.html  auto_research.survey.core.html  auto_research.survey.html  auto_research.survey.paper_reader.html  auto_research.survey.prompts.html  auto_research.utils.files.html  auto_research.utils.html  auto_research.utils.stored_info.html  auto_research.version.html  modules.html
docs_source/source/: conf.py  index.rst  installation.rst
docs_source/source/_templates/: layout.html
docs_source/source/_templates/autosummary/: class.rst
docs_source/source/examples/: top_to_survey.py
examples/: auto_survey.py  explain_a_paper.py  get_github_link.py  search_papers.py  summarize_a_paper.py  summarize_all_papers.py  topic_to_survey.py
